<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button"
    tools:context=".CurrentOrder">

    <ListView
        android:id="@+id/itemList"
        android:layout_width="359dp"
        android:layout_height="441dp"
        android:background="@drawable/lightwood"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/placeOrder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="placeOrder"
        android:text="@string/order_button"
        app:layout_constraintEnd_toEndOf="@+id/itemList"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/itemList"
        app:layout_constraintTop_toBottomOf="@+id/itemList" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:text="@string/current_order"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subtotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:text="@string/subtotal"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:textColor="#070707"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/salesTax"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:textColor="#070606"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/subtotal"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/subtotal" />

    <TextView
        android:id="@+id/total"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/salesTax"
        app:layout_constraintTop_toBottomOf="@+id/salesTax" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:text="@string/sales_tax"
        android:textColor="#090909"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:text="@string/total"
        android:textColor="#090808"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/total"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>